[package]
name = "cyclic_list"
version = "0.1.0"
edition = "2018"
description = "a doubly-linked list with owned nodes, implemented as a cyclic list"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghost-cell = "0.2"
static-rc = "0.4"

[features]
length = []
default = ["length"]